backend/src/api/api.hpp

    
    typedef struct LeHandle LeHandle;
    typedef struct LeLibraryId
    {
        uint32_t index;
        uint32_t generation;
    } LeLibraryId;
    typedef struct LeDesignId
    {
        uint32_t index;
        uint32_t generation;
    } LeDesignId;
    typedef struct LeAbstractId
    {
        uint32_t index;
        uint32_t generation;
    } LeAbstractId;
    typedef struct LeLibraryInfo
    {
        LeLibraryId id;
        const char *name;
    } LeLibraryInfo;
    typedef struct LeDesignInfo
    {
        LeLibraryId library_id;
        LeDesignId id;
        LeAbstractId abstract_id;
        const char *name;
    } LeDesignInfo;
    typedef struct LeLayerRow
    {
        const char *name;
        uint8_t color_r;
        uint8_t color_g;
        uint8_t color_b;
    } LeLayerRow;
    int le_read_lef(LeHandle *handle, const char *path);
    int32_t le_message_count(LeHandle *handle);
    const char *le_message_at(LeHandle *handle, int32_t index);
    const char *le_design_name(LeHandle *handle, int32_t index);
    int le_set_current_design(LeHandle *handle, int32_t index);
    LeLibraryInfo le_library_at(LeHandle *handle, int32_t index);
    LeDesignInfo le_library_design_at(LeHandle *handle, int32_t library_index, int32_t design_index);
    int le_set_current_design_by_id(LeHandle *handle, LeDesignId design_id);
    LeDesignId le_design_by_name(LeHandle *handle, const char *name);
    LeLibraryId le_library_by_name(LeHandle *handle, const char *name);
    const char *le_library_name(LeHandle *handle, LeLibraryId id);
    const char *le_design_name_by_id(LeHandle *handle, LeDesignId id);
    int32_t le_get_libraries(LeHandle *handle, const char *name_expression, const char *filter_expression);
    LeLibraryId le_search_result_library_at(LeHandle *handle, int32_t index);
    int32_t le_get_designs(LeHandle *handle, LeLibraryId of_library, const char *name_expression, const char *filter_expression);
    LeDesignId le_search_result_design_at(LeHandle *handle, int32_t index);
    int32_t le_get_abstracts(LeHandle *handle, LeDesignId of_design, const char *filter_expression);
    LeAbstractId le_search_result_abstract_at(LeHandle *handle, int32_t index);
    int32_t le_layer_count(LeHandle *handle);
    LeLayerRow le_layer_at(LeHandle *handle, int32_t row_index);
    int32_t le_purpose_count(LeHandle *handle);
    int32_t le_purpose_at(LeHandle *handle, int32_t index);
    typedef struct LeTerminalId
    {
        uint32_t index;
        uint32_t generation;
    } LeTerminalId;
    const char *le_terminal_name(LeHandle *handle, LeTerminalId id);
    int32_t le_get_terminals(LeHandle *handle, LeAbstractId of_abstract, const char *name_expression, const char *filter_expression);