flutter_plugin/lib/lef_editor_plugin_bindings_generated.dart


  /// @brief Look up the Library named `name` (exact match) on this
  /// handle - same contract as le_design_by_name, one level up. Returns
  /// an invalid id (index == UINT32_MAX) if handle or name is null, or
  /// no Library with that name is loaded on this handle.
  LeLibraryId le_library_by_name(
    ffi.Pointer<LeHandle> handle,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _le_library_by_name(handle, name);
  }

  late final _le_library_by_namePtr =
      _lookup<
        ffi.NativeFunction<
          LeLibraryId Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)
        >
      >('le_library_by_name');
  late final _le_library_by_name = _le_library_by_namePtr
      .asFunction<
        LeLibraryId Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)
      >();

  /// @brief The Library at `id`'s own name - a direct field accessor
  /// (same convention as le_terminal_name), for a caller that has an id
  /// (e.g. from le_search_result_library_at) rather than a flat index
  /// (le_library_at's own addressing). Returned pointer is owned by the
  /// handle's Root - valid until the next call that mutates this
  /// handle's Library pool - copy out immediately, don't hold across
  /// another call. Returns nullptr if handle is null or id doesn't name
  /// a Library on this handle.
  ffi.Pointer<ffi.Char> le_library_name(
    ffi.Pointer<LeHandle> handle,
    LeLibraryId id,
  ) {
    return _le_library_name(handle, id);
  }

  late final _le_library_namePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<LeHandle>, LeLibraryId)
        >
      >('le_library_name');
  late final _le_library_name = _le_library_namePtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<LeHandle>, LeLibraryId)
      >();

  /// @brief The Design at `id`'s own name - same contract as
  /// le_library_name, one level down. Distinct from le_design_name
  /// above (which is flat-index addressed, like le_library_at/
  /// le_library_design_at's own enumeration) since this plain-C API
  /// can't overload on parameter type.
  ffi.Pointer<ffi.Char> le_design_name_by_id(
    ffi.Pointer<LeHandle> handle,
    LeDesignId id,
  ) {
    return _le_design_name_by_id(handle, id);
  }

  late final _le_design_name_by_idPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<LeHandle>, LeDesignId)
        >
      >('le_design_name_by_id');
  late final _le_design_name_by_id = _le_design_name_by_idPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<LeHandle>, LeDesignId)
      >();

  /// @brief Search every Library on this handle - unlike
  /// le_get_terminals/le_get_designs/le_get_abstracts, Library has no
  /// parent type, so there is no `-of`/default-scope concept here; this
  /// always searches every Library loaded so far. `name_expression`
  /// (glob-matched against Library::name, Tcl `string match` semantics)
  /// and `filter_expression` (see backend/src/database/filter.hpp) are
  /// each optional - pass null or "" to skip that axis. Returns the
  /// match count (0 if handle is null or nothing matched), or -1 if
  /// filter_expression fails to parse or references an unknown
  /// field/hop (see le_message_count/le_message_at for either error).
  /// Read results back via le_search_result_library_at, same "valid
  /// until the next call" convention as this API's other cached-result
  /// accessors.
  int le_get_libraries(
    ffi.Pointer<LeHandle> handle,
    ffi.Pointer<ffi.Char> name_expression,
    ffi.Pointer<ffi.Char> filter_expression,
  ) {
    return _le_get_libraries(handle, name_expression, filter_expression);
  }

  late final _le_get_librariesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<LeHandle>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('le_get_libraries');
  late final _le_get_libraries = _le_get_librariesPtr
      .asFunction<
        int Function(
          ffi.Pointer<LeHandle>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief The LeLibraryId at `index` (0..le_get_libraries' last
  /// return value - 1) from the most recent le_get_libraries call.
  /// Returns an invalid id (index == UINT32_MAX) if handle is null or
  /// index is out of range.
  LeLibraryId le_search_result_library_at(
    ffi.Pointer<LeHandle> handle,
    int index,
  ) {
    return _le_search_result_library_at(handle, index);
  }

  late final _le_search_result_library_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeLibraryId Function(ffi.Pointer<LeHandle>, ffi.Int32)
        >
      >('le_search_result_library_at');
  late final _le_search_result_library_at = _le_search_result_library_atPtr
      .asFunction<LeLibraryId Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Search Designs. `of_library` scopes to one Library's own
  /// Designs (see le_library_by_name) - pass an invalid id (e.g. a
  /// default-constructed LeLibraryId) to use the default scope instead:
  /// the current view's own Design's Library if a Design is currently
  /// selected (le_set_current_design/le_set_current_design_by_id), else
  /// every Design loaded on this handle. `name_expression`/
  /// `filter_expression` - see le_get_libraries' own comment. Returns
  /// the match count, or -1 on a filter parse/validation error.
  int le_get_designs(
    ffi.Pointer<LeHandle> handle,
    LeLibraryId of_library,
    ffi.Pointer<ffi.Char> name_expression,
    ffi.Pointer<ffi.Char> filter_expression,
  ) {
    return _le_get_designs(
      handle,
      of_library,
      name_expression,
      filter_expression,
    );
  }

  late final _le_get_designsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<LeHandle>,
            LeLibraryId,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('le_get_designs');
  late final _le_get_designs = _le_get_designsPtr
      .asFunction<
        int Function(
          ffi.Pointer<LeHandle>,
          LeLibraryId,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief The LeDesignId at `index` from the most recent le_get_designs
  /// call - see le_search_result_library_at's own contract.
  LeDesignId le_search_result_design_at(
    ffi.Pointer<LeHandle> handle,
    int index,
  ) {
    return _le_search_result_design_at(handle, index);
  }

  late final _le_search_result_design_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeDesignId Function(ffi.Pointer<LeHandle>, ffi.Int32)
        >
      >('le_search_result_design_at');
  late final _le_search_result_design_at = _le_search_result_design_atPtr
      .asFunction<LeDesignId Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Search Abstracts. `of_design` scopes to one Design's own
  /// Abstract (today always exactly one, per Design - see
  /// le_design_by_name) - pass an invalid id to use the default scope:
  /// the currently selected Design's Abstract if one is selected, else
  /// none. Abstract has no name field (LEF has no concept of naming an
  /// Abstract independently of its Design), so there is no
  /// `name_expression` parameter here, only `filter_expression` - see
  /// le_get_libraries' own comment. Returns the match count, or -1 on a
  /// filter parse/validation error.
  int le_get_abstracts(
    ffi.Pointer<LeHandle> handle,
    LeDesignId of_design,
    ffi.Pointer<ffi.Char> filter_expression,
  ) {
    return _le_get_abstracts(handle, of_design, filter_expression);
  }

  late final _le_get_abstractsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<LeHandle>,
            LeDesignId,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('le_get_abstracts');
  late final _le_get_abstracts = _le_get_abstractsPtr
      .asFunction<
        int Function(ffi.Pointer<LeHandle>, LeDesignId, ffi.Pointer<ffi.Char>)
      >();

  /// @brief The LeAbstractId at `index` from the most recent
  /// le_get_abstracts call - see le_search_result_library_at's own
  /// contract.
  LeAbstractId le_search_result_abstract_at(
    ffi.Pointer<LeHandle> handle,
    int index,
  ) {
    return _le_search_result_abstract_at(handle, index);
  }

  late final _le_search_result_abstract_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeAbstractId Function(ffi.Pointer<LeHandle>, ffi.Int32)
        >
      >('le_search_result_abstract_at');
  late final _le_search_result_abstract_at = _le_search_result_abstract_atPtr
      .asFunction<LeAbstractId Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Number of layer-widget rows currently available - mirrors
  /// ViewLayerSet::rows() directly (see LeLayerRow's own comment: this
  /// includes BOUNDARY and any future non-Technology-derived "extra"
  /// row, not just physical Layers), so this doesn't care whether a
  /// Technology has even been declared yet - it's simply however many
  /// rows the handle's current ViewLayerSet happens to have (0 if
  /// handle is null or none has been built yet, e.g. before the first
  /// le_read_lef() call). See le_layer_at() for each row's contents.
  int le_layer_count(ffi.Pointer<LeHandle> handle) {
    return _le_layer_count(handle);
  }

  late final _le_layer_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>)>>(
        'le_layer_count',
      );
  late final _le_layer_count = _le_layer_countPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>)>();

  /// @brief The row at `row_index` (0..le_layer_count()-1). An
  /// all-invalid/null row (name == null) if handle is null or row_index
  /// is out of range, rather than crashing.
  LeLayerRow le_layer_at(ffi.Pointer<LeHandle> handle, int row_index) {
    return _le_layer_at(handle, row_index);
  }

  late final _le_layer_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeLayerRow Function(ffi.Pointer<LeHandle>, ffi.Int32)
        >
      >('le_layer_at');
  late final _le_layer_at = _le_layer_atPtr
      .asFunction<LeLayerRow Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Number of distinct purposes across the handle's current
  /// ViewLayerSet - mirrors ViewLayerSet::purposes() directly. The
  /// "columns" axis of a layer visibility/selectability widget,
  /// independent of any row/layer (see le_purpose_at()). 0 if handle is
  /// null or no ViewLayerSet has been built yet.
  int le_purpose_count(ffi.Pointer<LeHandle> handle) {
    return _le_purpose_count(handle);
  }

  late final _le_purpose_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>)>>(
        'le_purpose_count',
      );
  late final _le_purpose_count = _le_purpose_countPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>)>();

  /// @brief The purpose at `index` (0..le_purpose_count()-1) - mirrors
  /// le::ViewLayerPurpose's declaration order: 0 = TERMINAL,
  /// 1 = OBSTRUCTION, 2 = BOUNDARY. Returns -1 if handle is null or
  /// index is out of range, rather than crashing.
  int le_purpose_at(ffi.Pointer<LeHandle> handle, int index) {
    return _le_purpose_at(handle, index);
  }

  late final _le_purpose_atPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>, ffi.Int32)>
      >('le_purpose_at');
  late final _le_purpose_at = _le_purpose_atPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, int)>();
